--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "body-parser": "^1.20.2",
-      "express": "^4.18.2",
-      "nodemon": "^3.0.1"
+        "body-parser": "^1.20.2",
+        "express": "^4.18.2",
+        "nodemon": "^3.0.1"
+    },
+    "devDependencies": {
+        "daisyui": "^4.0.8",
+        "tailwindcss": "^3.3.5"
     }
-  }
-  
+}
